--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="app.css" />
+    <link rel="icon" type="image/png" href="planta.png" />
   </head>
   <body>
     <canvas></canvas>
